Fix P25 traffic lifecycle and call telemetry